--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -849,16 +849,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "62"
+       "(40131, 104454050898331)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,19 +869,19 @@
     "def decode(data):\n",
     "    diffs = {\n",
     "        'R': 1,\n",
-    "        'D': 1j,\n",
+    "        'D': -1j,\n",
     "        'L': -1,\n",
-    "        'U': -1j\n",
+    "        'U': 1j\n",
     "    }\n",
     "    for dir, length, _ in data:\n",
-    "        yield diffs[dir], length\n",
+    "        yield diffs[dir], int(length)\n",
     "\n",
     "def decode_2(data):\n",
     "    diffs = {\n",
     "        '0': 1,\n",
-    "        '1': 1j,\n",
+    "        '1': -1j,\n",
     "        '2': -1,\n",
-    "        '3': -1j\n",
+    "        '3': 1j\n",
     "    }\n",
     "    for _, _, hex  in data:\n",
     "        match = re.match(r'\\(#(.*)\\)', hex)[1]\n",
@@ -889,30 +889,45 @@
     "        yield diffs[dir], int(n, 16)\n",
     "\n",
     "def day18(data, decode=decode):\n",
-    "    borders, current = set([0]), 0\n",
-    "    minx, miny, maxx, maxy = 0, 0, 0, 0\n",
-    "\n",
-    "    area = 0\n",
+    "    current, ymin = 0, 0\n",
     "    for diff, length in decode(data):\n",
-    "        length = int(length)\n",
-    "        for i in range(length):\n",
-    "            current += diff\n",
-    "            borders.add(current)\n",
-    "            area += 1\n",
-    "        y, x = int(current.imag), int(current.real)\n",
-    "        minx, miny, maxx, maxy = min(minx, x), min(miny, y), max(maxx, x), max(maxy, y)\n",
+    "        if diff.imag:\n",
+    "            current -= diff.imag*length\n",
+    "            ymin = max(current, ymin)\n",
+    "            # print(current, length, ymin)\n",
+    "    current = ymin*1j\n",
     "\n",
-    "    # print(minx, maxx, miny, maxy, area, borders)\n",
     "\n",
-    "    def get_neighbors(borders, node):\n",
-    "        for i in [1, -1, 1j, -1j]:\n",
-    "            if node + i not in borders:\n",
-    "                yield node + i\n",
-    "    fill, _ = dfs(borders, 1+1j, get_neighbors)\n",
+    "    # taken from https://www.mathsisfun.com/geometry/area-irregular-polygons.html from https://old.reddit.com/r/adventofcode/comments/18l0qtr/2023_day_18_solutions/kdvs7m3/\n",
+    "    surface, ls, rs = 1, 0, 0\n",
+    "    for diff, length in decode(data):\n",
+    "        # print(current, diff, length)\n",
+    "        current = current + length*diff\n",
+    "        surface += length\n",
+    "        if not diff.imag:\n",
+    "            area = (length)*(current.imag)*2\n",
+    "            if area < 0:\n",
+    "                continue\n",
+    "            # print('a', diff, length, current.imag, area)\n",
+    "            if diff > 0:\n",
+    "                rs += area\n",
+    "            else:\n",
+    "                ls += area\n",
     "\n",
-    "    return area + len(fill)\n",
+    "    return math.ceil((surface + abs(rs-ls))/2)\n",
+    "\n",
+    "    # if not diff.imag:\n",
+    "    #     area = (length+1)*(current.imag-1)\n",
+    "    #     if diff > 0:\n",
+    "    #         pos += area\n",
+    "    #     else:\n",
+    "    #         neg += area\n",
+    "            \n",
+    "    # pos, neg = 0, 0\n",
+    "\n",
+    "    # print(pos, neg, pos-neg, surface)\n",
     "        \n",
-    "day18(data18)\n",
+    "day18(data18), day18(data18, decode_2)\n",
     "\n",
     "# wrong 43026 too high"
    ]
