--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "(40131, 104454050898331)"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,43 +894,27 @@
     "        if diff.imag:\n",
     "            current -= diff.imag*length\n",
     "            ymin = max(current, ymin)\n",
-    "            # print(current, length, ymin)\n",
     "    current = ymin*1j\n",
     "\n",
-    "\n",
     "    # taken from https://www.mathsisfun.com/geometry/area-irregular-polygons.html from https://old.reddit.com/r/adventofcode/comments/18l0qtr/2023_day_18_solutions/kdvs7m3/\n",
-    "    surface, ls, rs = 1, 0, 0\n",
+    "    surface, fill = 1, 0\n",
     "    for diff, length in decode(data):\n",
-    "        # print(current, diff, length)\n",
     "        current = current + length*diff\n",
     "        surface += length\n",
     "        if not diff.imag:\n",
-    "            area = (length)*(current.imag)*2\n",
-    "            if area < 0:\n",
-    "                continue\n",
-    "            # print('a', diff, length, current.imag, area)\n",
-    "            if diff > 0:\n",
-    "                rs += area\n",
-    "            else:\n",
-    "                ls += area\n",
+    "            fill += (-1 if diff < 0 else 1)*(length)*(current.imag)*2\n",
     "\n",
-    "    return math.ceil((surface + abs(rs-ls))/2)\n",
-    "\n",
-    "    # if not diff.imag:\n",
-    "    #     area = (length+1)*(current.imag-1)\n",
-    "    #     if diff > 0:\n",
-    "    #         pos += area\n",
-    "    #     else:\n",
-    "    #         neg += area\n",
-    "            \n",
-    "    # pos, neg = 0, 0\n",
-    "\n",
-    "    # print(pos, neg, pos-neg, surface)\n",
+    "    return math.ceil((surface + abs(fill))/2)\n",
     "        \n",
-    "day18(data18), day18(data18, decode_2)\n",
-    "\n",
-    "# wrong 43026 too high"
+    "day18(data18), day18(data18, decode_2)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
