--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -897,14 +897,14 @@
     "    current = ymin*1j\n",
     "\n",
     "    # taken from https://www.mathsisfun.com/geometry/area-irregular-polygons.html from https://old.reddit.com/r/adventofcode/comments/18l0qtr/2023_day_18_solutions/kdvs7m3/\n",
-    "    surface, fill = 1, 0\n",
+    "    surface, area = 1, 0\n",
     "    for diff, length in decode(data):\n",
     "        current = current + length*diff\n",
     "        surface += length\n",
     "        if not diff.imag:\n",
-    "            fill += (-1 if diff < 0 else 1)*(length)*(current.imag)*2\n",
+    "            area += (-1 if diff < 0 else 1)*(length)*(current.imag)*2\n",
     "\n",
-    "    return math.ceil((surface + abs(fill))/2)\n",
+    "    return math.ceil((surface + abs(area))/2)\n",
     "        \n",
     "day18(data18), day18(data18, decode_2)\n"
    ]
