--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -910,11 +910,104 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "331208"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get19():\n",
+    "    rules = defaultdict(lambda: [])\n",
+    "    parts = []\n",
+    "    thresholds = defaultdict(lambda: [])\n",
+    "    with open(f\"./data/day19.txt\") as f:\n",
+    "        lines = f.readlines()\n",
+    "        for i in range(len(lines)):\n",
+    "            line = lines[i].strip()\n",
+    "            if not line:\n",
+    "                break\n",
+    "            # TODO: find thresholds where a rule flips\n",
+    "            # print(line, re.findall(r'([a-zA-Z]+){((?:[a-zA-Z]+[<>]\\d+:[a-zA-Z]+,)+)([a-zA-Z]+)}', line))\n",
+    "            start, checks, terminus = re.findall(r'([a-zA-Z]+){((?:[a-zA-Z]+[<>]\\d+:[a-zA-Z]+,)+)([a-zA-Z]+)}', line)[0]\n",
+    "            rules[start] = [check.split(':') for check in checks.split(',')[:-1]] + [['True', terminus]]\n",
+    "        for i in range(i+1, len(lines)):\n",
+    "            # print(re.findall(r'{(.+)}', lines[i].strip()))\n",
+    "            vars = [var.split('=') for var in re.findall(r'{(.+)}', lines[i].strip())[0].split(',')]\n",
+    "            parts.append({k:int(v) for k,v in vars})\n",
+    "\n",
+    "    return rules, parts\n",
+    "\n",
+    "data19 = get19()\n",
+    "\n",
+    "def day19_1(rules, parts):\n",
+    "    accepted = []\n",
+    "\n",
+    "    def check_part(part):\n",
+    "        x, m, a, s = part['x'], part['m'], part['a'], part['s']\n",
+    "        # print(part, x, m, a, s)\n",
+    "        workflow = 'in'\n",
+    "        while workflow:\n",
+    "            # print(workflow)\n",
+    "            for check, accept in rules[workflow]:\n",
+    "                # print(check, accept, eval(check))\n",
+    "                if eval(check):\n",
+    "                    if accept == 'A':\n",
+    "                        # print('A')\n",
+    "                        return accepted.append(part)\n",
+    "                    elif accept == 'R':\n",
+    "                        return\n",
+    "                    workflow = accept\n",
+    "                    break\n",
+    "\n",
+    "\n",
+    "    for part in parts:\n",
+    "        check_part(part)\n",
+    "    \n",
+    "    return sum([sum(x.values()) for x in accepted])\n",
+    "    \n",
+    "day19_1(*data19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['x<1853', 'qkm']\n",
+      "['True', 'qt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day19_2(rules):\n",
+    "\n",
+    "    def rule_bounds(workflow, x, m, a, s):\n",
+    "        for check in rules[workflow]:\n",
+    "            print(check)\n",
+    "\n",
+    "    rule_bounds('in', (1, 4000), (1, 4000), (1, 4000), (1, 4000))\n",
+    "\n",
+    "day19_2(data19[0])"
+   ]
   }
  ],
  "metadata": {
