--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -911,16 +911,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "331208"
+       "(331208, 121464316215623)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,14 +935,11 @@
     "            line = lines[i].strip()\n",
     "            if not line:\n",
     "                break\n",
-    "            # print(line, re.findall(r'([a-zA-Z]+){((?:[a-zA-Z]+[<>]\\d+:[a-zA-Z]+,)+)([a-zA-Z]+)}', line))\n",
     "            start, checks, terminus = re.findall(r'([a-zA-Z]+){((?:[a-zA-Z]+[<>]\\d+:[a-zA-Z]+,)+)([a-zA-Z]+)}', line)[0]\n",
     "            rules[start] = [check.split(':') for check in checks.split(',')[:-1]] + [['True', terminus]]\n",
     "        for i in range(i+1, len(lines)):\n",
-    "            # print(re.findall(r'{(.+)}', lines[i].strip()))\n",
     "            vars = [var.split('=') for var in re.findall(r'{(.+)}', lines[i].strip())[0].split(',')]\n",
     "            parts.append({k:int(v) for k,v in vars})\n",
-    "\n",
     "    return rules, parts\n",
     "\n",
     "data19 = get19()\n",
@@ -952,100 +949,51 @@
     "\n",
     "    def check_part(part):\n",
     "        x, m, a, s = part['x'], part['m'], part['a'], part['s']\n",
-    "        # print(part, x, m, a, s)\n",
     "        workflow = 'in'\n",
     "        while workflow:\n",
-    "            # print(workflow)\n",
     "            for check, accept in rules[workflow]:\n",
-    "                # print(check, accept, eval(check))\n",
     "                if eval(check):\n",
     "                    if accept == 'A':\n",
-    "                        # print('A')\n",
     "                        return accepted.append(part)\n",
     "                    elif accept == 'R':\n",
     "                        return\n",
     "                    workflow = accept\n",
     "                    break\n",
     "\n",
-    "\n",
     "    for part in parts:\n",
     "        check_part(part)\n",
-    "    \n",
     "    return sum([sum(x.values()) for x in accepted])\n",
-    "    \n",
-    "day19_1(*data19)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "167409079868000\n"
-     ]
-    }
-   ],
-   "source": [
-    "def day19_2(rules):\n",
     "\n",
+    "def day19_2(rules):\n",
     "    def rule_bounds(workflow, vars):\n",
     "        count = 0\n",
     "        if workflow == 'R':\n",
     "            return count\n",
     "        if workflow == 'A':\n",
-    "            # print(vars, functools.reduce(lambda acc, v: acc*(vars[v][1]-vars[v][0]), vars.keys(), 1))\n",
     "            return functools.reduce(lambda acc, v: acc*(vars[v][1]-vars[v][0]+1), vars.keys(), 1)\n",
-    "            # return 1\n",
-    "        # print(workflow, vars)\n",
     "        for check, result in rules[workflow]:\n",
-    "            # print(count, check, result)\n",
     "            if not (matched := re.match(r'([a-zA-z]+)(<|>)(\\d+)', check)):\n",
     "                return count + rule_bounds(result, vars)\n",
-    "\n",
     "            var, sign, num = matched[1], matched[2], int(matched[3])\n",
     "            vrange, varss, varsl, lt = vars[var], vars.copy(), vars.copy(), sign=='<'\n",
     "            varss[var], varsl[var] = (vrange[0], num-(1 if lt else 0)), (num+(0 if lt else 1), vrange[1])\n",
     "            conds = {'<': varss, '>': varsl}\n",
-    "            # print(conds)\n",
     "            count += 0 if conds[sign][var][0] > conds[sign][var][1] else rule_bounds(result, conds[sign])\n",
-    "            # print(check, result, count)\n",
     "            vars = conds['<' if sign == '>' else '>']\n",
     "            if vars[var][0] > vars[var][1]:\n",
     "                break\n",
-    "        # print('?', workflow, count)\n",
     "        return count\n",
-    "\n",
     "    return rule_bounds('in', {v: (1, 4000) for v in ['x', 'm', 'a', 's']})\n",
-    "\n",
-    "print(day19_2(data19[0]))\n",
-    "# 167409079868000\n",
-    "# 167010937327821"
+    "    \n",
+    "day19_1(*data19), day19_2(data19[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Interval' object has no attribute 'slice'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mInterval\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4001\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mslice\u001b[49m(\u001b[38;5;241m2000\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Interval' object has no attribute 'slice'"
-     ]
-    }
-   ],
-   "source": [
-    "Interval(1, 4001).slice(2000)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
