--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -990,10 +990,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Counter()\n",
+      "broadcaster -low -> a\n",
+      "a -high -> inv\n",
+      "a -high -> con\n",
+      "inv -low -> b\n",
+      "con -high -> output\n",
+      "b -high -> con\n",
+      "con -low -> output\n",
+      "1 Counter({False: 4, True: 4})\n",
+      "broadcaster -low -> a\n",
+      "a -low -> inv\n",
+      "a -low -> con\n",
+      "inv -high -> b\n",
+      "con -high -> output\n",
+      "2 Counter({False: 8, True: 6})\n",
+      "broadcaster -low -> a\n",
+      "a -high -> inv\n",
+      "a -high -> con\n",
+      "inv -low -> b\n",
+      "con -low -> output\n",
+      "b -low -> con\n",
+      "con -high -> output\n",
+      "3 Counter({False: 13, True: 9})\n",
+      "broadcaster -low -> a\n",
+      "a -low -> inv\n",
+      "a -low -> con\n",
+      "inv -high -> b\n",
+      "con -high -> output\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Counter({False: 17, True: 11})"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parse20():\n",
+    "    cons, flips, sources = {}, {}, defaultdict(lambda: [])\n",
+    "    for line in data(20):\n",
+    "        i, o = line.split(' -> ')\n",
+    "        outputs = o.split(', ')\n",
+    "        if i[0] == 'b':\n",
+    "            broadcaster = outputs\n",
+    "            i = f' broadcaster'\n",
+    "        else:\n",
+    "            (flips if i[0] == '%' else cons)[i[1:]] = [False, outputs]\n",
+    "        for out in outputs:\n",
+    "            sources[out].append(i[1:])\n",
+    "    for con in cons:\n",
+    "        cons[con][0] = {x: False for x in sources[con]}\n",
+    "    return broadcaster, flips, cons\n",
+    "\n",
+    "data20 = parse20()\n",
+    "\n",
+    "def day20(broadcaster, flips, cons):\n",
+    "    q = deque()\n",
+    "    pulses = Counter()\n",
+    "\n",
+    "    def run():\n",
+    "        while q:\n",
+    "            source, mod, high = q.popleft()\n",
+    "            pulses[high] += 1\n",
+    "            if debug:\n",
+    "                print(f'{source} -{'high' if high else 'low'} -> {mod}')\n",
+    "            if (flip := flips.get(mod)) and not high:\n",
+    "                status = not flip[0]\n",
+    "                flip[0] = status\n",
+    "                for dest in flip[1]:\n",
+    "                    q.append((mod, dest, status))\n",
+    "            elif con := cons.get(mod):\n",
+    "                con[0][source] = high\n",
+    "                output = False if np.all(list(con[0].values())) else True\n",
+    "                for dest in con[1]:\n",
+    "                    q.append((mod, dest, output))\n",
+    "    def push():\n",
+    "        pulses[False]+=1\n",
+    "        for i in broadcaster:\n",
+    "            q.append(('broadcaster', i, 0))\n",
+    "        run()\n",
+    "\n",
+    "    for i in range(1000):\n",
+    "        if debug:\n",
+    "            print(i, pulses)\n",
+    "        push()\n",
+    "\n",
+    "    return pulses\n",
+    "\n",
+    "debug=False\n",
+    "day20(*data20)             "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0^0"
+   ]
   }
  ],
  "metadata": {
