--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -990,52 +990,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 Counter()\n",
-      "broadcaster -low -> a\n",
-      "a -high -> inv\n",
-      "a -high -> con\n",
-      "inv -low -> b\n",
-      "con -high -> output\n",
-      "b -high -> con\n",
-      "con -low -> output\n",
-      "1 Counter({False: 4, True: 4})\n",
-      "broadcaster -low -> a\n",
-      "a -low -> inv\n",
-      "a -low -> con\n",
-      "inv -high -> b\n",
-      "con -high -> output\n",
-      "2 Counter({False: 8, True: 6})\n",
-      "broadcaster -low -> a\n",
-      "a -high -> inv\n",
-      "a -high -> con\n",
-      "inv -low -> b\n",
-      "con -low -> output\n",
-      "b -low -> con\n",
-      "con -high -> output\n",
-      "3 Counter({False: 13, True: 9})\n",
-      "broadcaster -low -> a\n",
-      "a -low -> inv\n",
-      "a -low -> con\n",
-      "inv -high -> b\n",
-      "con -high -> output\n"
+      "873301506\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Counter({False: 17, True: 11})"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1060,6 +1023,7 @@
     "def day20(broadcaster, flips, cons):\n",
     "    q = deque()\n",
     "    pulses = Counter()\n",
+    "    rx = False\n",
     "\n",
     "    def run():\n",
     "        while q:\n",
@@ -1077,6 +1041,9 @@
     "                output = False if np.all(list(con[0].values())) else True\n",
     "                for dest in con[1]:\n",
     "                    q.append((mod, dest, output))\n",
+    "            if mod == 'rx' and not high:\n",
+    "                rx = True\n",
+    "\n",
     "    def push():\n",
     "        pulses[False]+=1\n",
     "        for i in broadcaster:\n",
@@ -1087,8 +1054,14 @@
     "        if debug:\n",
     "            print(i, pulses)\n",
     "        push()\n",
+    "    print(functools.reduce(lambda x, y: x*y, pulses.values(), 1))\n",
     "\n",
-    "    return pulses\n",
+    "    while not rx:\n",
+    "        if debug:\n",
+    "            print(i, pulses)\n",
+    "        push()\n",
+    "        i += 1\n",
+    "    return i\n",
     "\n",
     "debug=False\n",
     "day20(*data20)             "
@@ -1096,22 +1069,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "873301506"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "0^0"
+    "49189*17754"
    ]
   }
  ],
