--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import functools\n",
     "import heapq\n",
     "import math\n",
+    "from modint import chinese_remainder\n",
     "import numpy as np\n",
     "import re\n",
     "from typing import Callable, TypeVar\n",
@@ -990,15 +991,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "873301506\n"
+      "873301506\n",
+      "{'nx': 3851, 'jq': 3911, 'cc': 4001, 'sp': 4013} {'nx': 3851, 'jq': 3911, 'cc': 4001, 'sp': 4013} 0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8049"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1023,7 +1035,7 @@
     "def day20(broadcaster, flips, cons):\n",
     "    q = deque()\n",
     "    pulses = Counter()\n",
-    "    rx = False\n",
+    "    initial, period = {}, {}\n",
     "\n",
     "    def run():\n",
     "        while q:\n",
@@ -1041,8 +1053,11 @@
     "                output = False if np.all(list(con[0].values())) else True\n",
     "                for dest in con[1]:\n",
     "                    q.append((mod, dest, output))\n",
-    "            if mod == 'rx' and not high:\n",
-    "                rx = True\n",
+    "                    if output and dest == 'dd':\n",
+    "                        if mod not in initial:\n",
+    "                            initial[mod] = i+2\n",
+    "                        elif mod not in period:\n",
+    "                            period[mod] = i+2-initial[mod]\n",
     "\n",
     "    def push():\n",
     "        pulses[False]+=1\n",
@@ -1056,11 +1071,13 @@
     "        push()\n",
     "    print(functools.reduce(lambda x, y: x*y, pulses.values(), 1))\n",
     "\n",
-    "    while not rx:\n",
-    "        if debug:\n",
-    "            print(i, pulses)\n",
+    "    \n",
+    "    for i in range(i, 8050):\n",
     "        push()\n",
-    "        i += 1\n",
+    "\n",
+    "    print(initial, period, chinese_remainder(period.values(), initial.values()))\n",
+    "\n",
+    "\n",
     "    return i\n",
     "\n",
     "debug=False\n",
@@ -1069,22 +1086,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "873301506"
+       "241823802412393"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "49189*17754"
+    "3851*3911*4001*4013"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3849, 3909, 3999, 4011, 3851, 3911, 4001, 4013)"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a, b, c, d, ad, bd, cd, dd\n",
+    "# 241823802412391\n",
+    "# 241823802412391\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "241823802412391"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from modint import chinese_remainder\n",
+    "chinese_remainder([ad, bd, cd, dd], [a, b, c, d])\n"
    ]
   }
  ],
