--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -12,7 +12,6 @@
     "import functools\n",
     "import heapq\n",
     "import math\n",
-    "from modint import chinese_remainder\n",
     "import numpy as np\n",
     "import re\n",
     "from typing import Callable, TypeVar\n",
@@ -991,29 +990,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "873301506\n",
-      "{'nx': 3851, 'jq': 3911, 'cc': 4001, 'sp': 4013} {'nx': 3851, 'jq': 3911, 'cc': 4001, 'sp': 4013} 0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "8049"
+       "(873301506, 241823802412393)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "debug=False\n",
+    "\n",
     "def parse20():\n",
     "    cons, flips, sources = {}, {}, defaultdict(lambda: [])\n",
     "    for line in data(20):\n",
@@ -1033,9 +1026,7 @@
     "data20 = parse20()\n",
     "\n",
     "def day20(broadcaster, flips, cons):\n",
-    "    q = deque()\n",
-    "    pulses = Counter()\n",
-    "    initial, period = {}, {}\n",
+    "    q, pulses, period = deque(), Counter(), {}    \n",
     "\n",
     "    def run():\n",
     "        while q:\n",
@@ -1053,11 +1044,9 @@
     "                output = False if np.all(list(con[0].values())) else True\n",
     "                for dest in con[1]:\n",
     "                    q.append((mod, dest, output))\n",
-    "                    if output and dest == 'dd':\n",
-    "                        if mod not in initial:\n",
-    "                            initial[mod] = i+2\n",
-    "                        elif mod not in period:\n",
-    "                            period[mod] = i+2-initial[mod]\n",
+    "                    if output and dest == 'dd': # hardcoded\n",
+    "                        if mod not in period: # tested, this is perfectly periodic\n",
+    "                            period[mod] = i+1 # because dd is the next step\n",
     "\n",
     "    def push():\n",
     "        pulses[False]+=1\n",
@@ -1069,84 +1058,23 @@
     "        if debug:\n",
     "            print(i, pulses)\n",
     "        push()\n",
-    "    print(functools.reduce(lambda x, y: x*y, pulses.values(), 1))\n",
+    "    part1 = functools.reduce(lambda x, y: x*y, pulses.values(), 1)\n",
     "\n",
-    "    \n",
-    "    for i in range(i, 8050):\n",
+    "    while len(period) < 4:\n",
+    "        i+=1\n",
     "        push()\n",
     "\n",
-    "    print(initial, period, chinese_remainder(period.values(), initial.values()))\n",
+    "    return part1, functools.reduce(lambda x, y: x*y, period.values(), 1)\n",
     "\n",
-    "\n",
-    "    return i\n",
-    "\n",
-    "debug=False\n",
     "day20(*data20)             "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "241823802412393"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "3851*3911*4001*4013"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3849, 3909, 3999, 4011, 3851, 3911, 4001, 4013)"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a, b, c, d, ad, bd, cd, dd\n",
-    "# 241823802412391\n",
-    "# 241823802412391\n",
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "241823802412391"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from modint import chinese_remainder\n",
-    "chinese_remainder([ad, bd, cd, dd], [a, b, c, d])\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
