--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1156,14 +1156,12 @@
        "(405, 61297)"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#TODO: cleanup - sick today\n",
-    "\n",
     "def parse22():\n",
     "    lines = data(22)\n",
     "    maxx, maxy, maxz = 0, 0, 0\n",
@@ -1173,19 +1171,16 @@
     "        split = lambda x: map(int, x.split(','))\n",
     "        (x0, y0, z0), (x1, y1, z1) = list(split(start)), list(split(end))\n",
     "        maxx, maxy, maxz = max(x1, maxx+1), max(y1, maxy+1), max(z1, maxz)\n",
-    "        blocks.append([(z0, z1+1), (x0, x1+1), (y0, y1+1)])\n",
-    "                      \n",
+    "        blocks.append([(z0, z1+1), (x0, x1+1), (y0, y1+1)])       \n",
     "    arr = np.zeros((maxz+1, maxx+1, maxy+1))\n",
     "    for i, (z, x, y) in enumerate(blocks):\n",
     "        arr[z[0], x[0], y[0]] = i+1\n",
-    "        # print(i, z, x, y)\n",
     "    return arr, sorted(blocks)\n",
     "\n",
     "data22 = parse22()\n",
     "\n",
     "def day22(arr, blocks):\n",
-    "    arr = arr.copy()\n",
-    "    supported = {}\n",
+    "    arr, supported = arr.copy(), {}\n",
     "\n",
     "    def drop(arr, i):\n",
     "        (z0, z1), (x0, x1), (y0, y1) = blocks[i]\n",
@@ -1193,41 +1188,29 @@
     "        while z > 0:\n",
     "            z -= 1 \n",
     "            if len((supps := np.nonzero(arr[z, x0:x1, y0:y1]))[0]):\n",
-    "                # print(i, arr[z, x0:x1, y0:y1])\n",
     "                supported[i+1] = set(arr[z, x0:x1, y0:y1][supps])\n",
     "                break\n",
-    "        # print('c', i+1, z+1, (z+1)+(z1-z0), x0, x1, y0, y1)\n",
     "        arr[z0, x0, y0] = 0\n",
     "        arr[z+1:(z+1)+(z1-z0), x0:x1, y0:y1] = i+1\n",
-    "        # print(arr[z+1:(z+1)+(z1-z0), x0:x1, y0:y1])\n",
     "\n",
-    "    for i, (z, x, y) in enumerate(blocks):\n",
+    "    for i in range(len(blocks)):\n",
     "        drop(arr, i)\n",
     "\n",
-    "    safe = set(range(1, len(blocks)+1))\n",
+    "    safe, supports = set(range(1, len(blocks)+1)), defaultdict(lambda: set())\n",
+    "    for block in supported:\n",
+    "        if len(supported[block]) == 1:\n",
+    "            safe.discard(next(iter(supported[block])))\n",
+    "        for support in supported[block]:\n",
+    "            supports[support].add(block)\n",
     "\n",
-    "    for i in supported:\n",
-    "        if len(supported[i]) == 1:\n",
-    "            safe.discard(next(iter(supported[i])))\n",
-    "\n",
-    "    def get_chains():\n",
-    "        chains = defaultdict(lambda: set())\n",
-    "        for i in supported:\n",
-    "            for block in supported[i]:\n",
-    "                chains[block].add(i)\n",
-    "        return chains\n",
-    "\n",
-    "    chains = get_chains()\n",
     "    def chain_reaction(i, acc):\n",
-    "        for candidate in chains.get(i, []):\n",
+    "        for candidate in supports.get(i, []):\n",
     "            if not supported[candidate].difference(acc):\n",
     "                acc.add(candidate)\n",
     "                chain_reaction(candidate, acc)\n",
     "        return len(acc)-1\n",
     "        \n",
-    "    part2 = sum([chain_reaction(i, set([i]))  for i in chains])\n",
-    "\n",
-    "    return len(safe), part2\n",
+    "    return len(safe), sum([chain_reaction(i, set([i]))  for i in supports])\n",
     "\n",
     "day22(*data22)"
    ]
