--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -1271,10 +1271,131 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import decimal\n",
+    "\n",
+    "def parse24(line):\n",
+    "    pos, vel = line.split(' @ ')\n",
+    "    f = lambda x: list(map(lambda x: decimal.Decimal(x), x.split(', ')))\n",
+    "    return f(pos), f(vel)\n",
+    "\n",
+    "data24 = data(24, parse24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14034"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day24(data, minb, maxb):\n",
+    "    count = 0\n",
+    "    for i, (a1, velA) in enumerate(data[:-1]):\n",
+    "        a2 = np.add(a1, velA)\n",
+    "        # https://en.wikipedia.org/wiki/Line%E2%80%93line_intersection#Given_two_points_on_each_line\n",
+    "        for (b1, velB) in data[i+1:]:\n",
+    "            b2 = np.add(b1, velB)\n",
+    "            (x1, y1, _), (x2, y2, _), (x3, y3, _), (x4, y4, _) = a1, a2, b1, b2\n",
+    "            if ((x1-x2)*(y3-y4)-(y1-y2)*(x3-x4)) == 0:\n",
+    "                continue\n",
+    "            intx = ((x1*y2-y1*x2)*(x3-x4) - (x1-x2)*(x3*y4-y3*x4))/((x1-x2)*(y3-y4)-(y1-y2)*(x3-x4))\n",
+    "            inty = ((x1*y2-y1*x2)*(y3-y4) - (y1-y2)*(x3*y4-y3*x4))/((x1-x2)*(y3-y4)-(y1-y2)*(x3-x4))\n",
+    "            \n",
+    "            minx = max(minb, x1 if velA[0] > 0 else minb, x3 if velB[0] > 0 else minb)\n",
+    "            maxx = min(maxb, x1 if velA[0] < 0 else maxb, x3 if velB[0] < 0 else maxb)\n",
+    "            miny = max(minb, y1 if velA[1] > 0 else minb, y3 if velB[1] > 0 else minb)\n",
+    "            maxy = min(maxb, y1 if velA[1] < 0 else maxb, y3 if velB[1] < 0 else maxb)\n",
+    "            if minx <= intx <= maxx and miny <= inty <= maxy:\n",
+    "                # print(intx, inty)\n",
+    "                count += 1\n",
+    "    return count\n",
+    "\n",
+    "day24(data24, 200000000000000, 400000000000000)\n",
+    "# wrong 14034"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.333333333333334"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 1, -6,  8]), array([ 1, -2,  0]))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.add(posA, np.multiply(velA, [])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "posA + velA * X = posB + velB * X\n",
+    "posA - posB = X(velB - velA)\n",
+    "X = (posA - posB)/(velB - velA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.5, 0.667, 0.75])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.divide([1, 2, 3], [2, 3, 4])"
+   ]
   }
  ],
  "metadata": {
