--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict, Counter, deque, OrderedDict\n",
+    "import decimal\n",
     "from intervaltree import Interval, IntervalTree\n",
     "import itertools\n",
     "import functools\n",
@@ -14,8 +15,14 @@
     "import math\n",
     "import numpy as np\n",
     "import networkx as nx\n",
+    "from ortools.sat.python import cp_model\n",
+    "from ortools.linear_solver import pywraplp\n",
+    "import random\n",
     "import re\n",
     "from typing import Callable, TypeVar\n",
+    "import sys\n",
+    "from scipy.optimize import fsolve\n",
+    "import z3\n",
     "\n",
     "np.set_printoptions(edgeitems=30, linewidth=100000, \n",
     "    formatter=dict(float=lambda x: \"%.3g\" % x))\n",
@@ -1271,12 +1278,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import decimal\n",
-    "\n",
     "def parse24(line):\n",
     "    pos, vel = line.split(' @ ')\n",
     "    f = lambda x: list(map(lambda x: decimal.Decimal(x), x.split(', ')))\n",
@@ -1287,16 +1292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14034"
+       "0"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,40 +1335,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 276,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15.333333333333334"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "def parse24(line):\n",
+    "    pos, vel = line.split(' @ ')\n",
+    "    f = lambda x: list(map(int, x.split(', ')))\n",
+    "    return f(pos), f(vel)\n",
+    "\n",
+    "data24 = data(24, parse24)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 1, -6,  8]), array([ 1, -2,  0]))"
+       "891705673259702"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.add(posA, np.multiply(velA, [])"
+    "# x + vx*t = a + va*t\n",
+    "# x-a = t(va-vx)\n",
+    "# (x-a)/(va-vx) = t = (y-b)/(vb-vy)\n",
+    "# (x-a)*(vb-vy) = (y-b)*(va-vx)\n",
+    "# (x-a) * (vb-vy) = (y-b) * (va-vx)\n",
+    "# (x-a) * (vy-vb) = (y-b) * (vx-va)\n",
+    "\n",
+    "def day24_2(data):\n",
+    "    def system(args):\n",
+    "        x, y, z, vx, vy, vz = args\n",
+    "        minimize = []\n",
+    "        i = random.randint(0, len(data)-3)\n",
+    "        for i in data[i:i+3]:\n",
+    "            ((a, b, c), (va, vb, vc)) = i\n",
+    "            # ((x1,y1,z1),(xv1,yv1,zv1)) = i\n",
+    "            # minimize.append((x-x1)*(vy-yv1) - (y-y1)*(vx-xv1))\n",
+    "            # minimize.append((x-x1)*(vz-zv1) - (z-z1)*(vx-xv1))\n",
+    "            minimize += [\n",
+    "                (x-a)*(vb-vy) - (y-b)*(va-vx),\n",
+    "                (x-a)*(vc-vz) - (z-c)*(va-vx)\n",
+    "                # (x-a)*(vy-vb) - (y-b)*(vx-va),\n",
+    "                # (x-a)*(vz-vc) - (z-c)*(vx-va)\n",
+    "            ]\n",
+    "        # print(minimize)\n",
+    "        return minimize\n",
+    "    x, y, z, vx, vy, vz = fsolve(system,data[0][0]+data[0][1], xtol=1e-16)\n",
+    "    # print(x+y+z, x, y, z, vx, vy, vz)\n",
+    "    return sum(map(round, [x, y, z]))\n",
+    "\n",
+    "day24_2(data24)\n",
+    "# 808107741406756"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "808107741406756"
+      ]
+     },
+     "execution_count": 317,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parse24(line):\n",
+    "    pos, vel = line.split(' @ ')\n",
+    "    f = lambda x: list(map(int, x.split(', ')))\n",
+    "    return f(pos), f(vel)\n",
+    "\n",
+    "data24 = data(24, parse24)\n",
+    "\n",
+    "def day24_2(data):\n",
+    "    solver = z3.Solver()\n",
+    "    x = z3.Int('x')\n",
+    "    y = z3.Int('y')\n",
+    "    z = z3.Int('z')\n",
+    "    vx = z3.Int('vx')\n",
+    "    vy = z3.Int('vy')\n",
+    "    vz = z3.Int('vz')\n",
+    "\n",
+    "    for hail in data:\n",
+    "        (a, b, c), (va, vb, vc) = hail\n",
+    "        # x + vx*t = a + va*t\n",
+    "        # x-a = t(va-vx)\n",
+    "        # (x-a)/(va-vx) = t = (y-b)/(vb-vy)\n",
+    "        # (x-a)*(vb-vy) = (y-b)*(va-vx)\n",
+    "        solver.add((x-a)*(vb-vy) == (y-b)*(va-vx))\n",
+    "        solver.add((x-a)*(vc-vz) == (z-c)*(va-vx))\n",
+    "\n",
+    "    solver.check()\n",
+    "    result = solver.model()\n",
+    "    return result[x].as_long() + result[y].as_long() + result[z].as_long()\n",
+    "\n",
+    "day24_2(data24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "expression must be affine: vars: 6 vars: 0 coeffs: -1 coeffs: 1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def parse24(line):\n",
+    "    pos, vel = line.split(' @ ')\n",
+    "    f = lambda x: list(map(int, x.split(', ')))\n",
+    "    return f(pos), f(vel)\n",
+    "\n",
+    "data24 = data(24, parse24)\n",
+    "\n",
+    "def day24_2(data):\n",
+    "    model = cp_model.CpModel()\n",
+    "    # model = cp_model.CpModel()\n",
+    "    # inf = sys.maxsize\n",
+    "    times = {}\n",
+    "    x = model.NewIntVar(-1000, 1000, \"x\")\n",
+    "    y = model.NewIntVar(-1000, 1000, \"y\")\n",
+    "    z = model.NewIntVar(-1000, 1000, \"z\")\n",
+    "    vx = model.NewIntVar(-1000, 1000, \"vx\")\n",
+    "    vy = model.NewIntVar(-1000, 1000, \"vy\")\n",
+    "    vz = model.NewIntVar(-1000, 1000, \"vz\")\n",
+    "\n",
+    "    # a = model.NewConstant(np.integer(a))\n",
+    "    # b = model.NewConstant(np.integer(b))\n",
+    "    # c = model.NewConstant(np.integer(c))\n",
+    "    # va = model.NewConstant(np.integer(va))\n",
+    "    # vb = model.NewConstant(np.integer(vb))\n",
+    "    # vc = model.NewConstant(np.integer(vc))\n",
+    "\n",
+    "    # vars = [None] * len(data) * 10\n",
+    "\n",
+    "    for i, hail in enumerate(data):\n",
+    "    # i, hail = 0, data[0]\n",
+    "        (a, b, c), (va, vb, vc) = hail\n",
+    "        # t = solver.NumVar(0, inf, f't_{i}')\n",
+    "    #     times[i] = model.NewIntVar(0, inf, str(i))\n",
+    "    #     print(a, b, c, va, vb, vc)\n",
+    "        a = model.NewConstant(a)\n",
+    "        b = model.NewConstant(b)\n",
+    "        c = model.NewConstant(c)\n",
+    "        va = model.NewConstant(va)\n",
+    "        vb = model.NewConstant(vb)\n",
+    "        vc = model.NewConstant(vc)\n",
+    "        t1 = model.NewIntVar(-1000, 1000, \"t1\")\n",
+    "        t2 = model.NewIntVar(-1000, 1000, \"t2\")\n",
+    "        t3 = model.NewIntVar(-1000, 1000, \"t3\")\n",
+    "        t4 = model.NewIntVar(-1000, 1000, \"t4\")\n",
+    "        model.AddMultiplicationEquality(t1, (x-a), (vb-vy))\n",
+    "        model.AddMultiplicationEquality(t2, (x-a), (vc-vz))\n",
+    "        model.AddMultiplicationEquality(t3, y-b, va-vx)\n",
+    "        model.AddMultiplicationEquality(t4, z-c, va-vx)\n",
+    "        model.Add(t1 == t3)\n",
+    "        model.Add(t2 == t4)\n",
+    "    # model.Add(c + times[i]*vc == z + times[i]*vz)\n",
+    "    # print(a, times[i], va, x, vx)\n",
+    "    # solver.Minimize((x-a)*(vy-vb) - (y-b)*(vx-va))\n",
+    "    # print(b, times[i],  vb, y, vy)\n",
+    "    # solver.Add(b + times[i]*vb == y + times[i]*vy)\n",
+    "    # solver.Add(c + times[i]*vc == z + times[i]*vz)\n",
+    "\n",
+    "    solver = cp_model.CpSolver()\n",
+    "    print(model.Validate())\n",
+    "    status = solver.Solve(model)\n",
+    "    print(status)\n",
+    "\n",
+    "day24_2(data24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot create 'numpy.integer' instances",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[141], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minteger\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot create 'numpy.integer' instances"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.integer(2)"
    ]
   },
   {
